// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePageFairsModule does not request past fairs if it has 8 running ones 1`] = `
Object {
  "home_page": Object {
    "fairs_module": Object {
      "results": Array [],
    },
  },
}
`;

exports[`HomePageFairsModule does not return fairs that do not have mobile images 1`] = `
Object {
  "home_page": Object {
    "fairs_module": Object {
      "results": Array [
        Object {
          "id": "artissima-2017",
          "is_active": true,
          "name": "Artissima 2017",
        },
        Object {
          "id": "zonamaco-foto-and-sal-n-del-anticuario-2017",
          "is_active": true,
          "name": "Zâ“ˆONAMACO FOTO & SALÃ“N DEL ANTICUARIO 2017",
        },
      ],
    },
  },
}
`;

exports[`HomePageFairsModule works 1`] = `
Object {
  "home_page": Object {
    "fairs_module": Object {
      "results": Array [],
    },
  },
}
`;
